feat: add subsystem supports
